--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <artifactId>Progression</artifactId>
-    <groupId>com.pogression</groupId>
+    <groupId>com.progression</groupId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
